--- a/packages/app/page.tmpl.html
+++ b/packages/app/page.tmpl.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Silkenweb SSR Example</title>
+    <base href="/">
+
     <script type="module">
         import init from "/app.js";
         init(new URL('app.wasm', import.meta.url));
