--- a/packages/app/page.tmpl.html
+++ b/packages/app/page.tmpl.html
@@ -7,8 +7,7 @@
     <base href="/">
 
     <script type="module">
-        import init from "/app.js";
-        init(new URL('app.wasm', import.meta.url));
+        {init_script}
     </script>
 </head>
 
