--- a/packages/app/page.tmpl.html
+++ b/packages/app/page.tmpl.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Silkenweb SSR Example</title>
+    {title_html}
     <base href="/">
 
     <script type="module">
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    {app_html}
+    {body_html}
 </body>
 
 </html>
