--- a/packages/client-side-rendered/index.html
+++ b/packages/client-side-rendered/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Silkenweb Client Side Rendering Example</title>
+    <title id="title"></title>
 </head>
 
 <body>
-    <div id="app"></div>
+    <div id="body"></div>
 </body>
 
 </html>
